// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataSourceList should render 1`] = `
<div>
  <div
    class="settings-base-page-root"
  >
    <div
      class="embedded-alert-list-root notification-alert-list-root"
    />
    <div
      class="maintenance-alert-root"
    />
    <div
      class="content-header"
    >
      <div
        class="header-text"
      >
        <div
          class="d-flex"
        >
          <h3
            class="title-text text-truncate"
          >
            <span
              class="text-truncate"
              data-tooltip="false"
              title=""
            >
              Data Sources
            </span>
          </h3>
        </div>
        <div
          class="description"
        >
          Manage Data Sources that are synced with Analytics Cloud.
        </div>
      </div>
      <div
        class="page-actions-container"
      />
    </div>
    <div>
      <div
        class="embedded-alert-list-root"
      />
      <div
        class="card card-root page-display"
      >
        <div
          class="toolbar-root"
        >
          <nav
            class="navbar navbar-root management-bar management-bar-light navbar-expand"
          >
            <div
              class="container-fluid"
            >
              <ul
                class="nav-root front-nav navbar-nav"
                role="tablist"
              >
                <li
                  class="nav-item"
                  role="presentation"
                >
                  <div
                    class="dropdown dropdown-root filter-and-order-root"
                  >
                    <button
                      aria-controls="clay-dropdown-menu-1"
                      aria-expanded="false"
                      aria-haspopup="true"
                      class="dropdown-toggle d-flex align-items-center btn btn-outline-borderless btn-sm btn-outline-secondary"
                      type="button"
                    >
                      Order
                      <svg
                        class="lexicon-icon lexicon-icon-caret-bottom ml-2 mt-0"
                        role="presentation"
                      >
                        <use
                          href="#caret-bottom"
                        />
                      </svg>
                    </button>
                  </div>
                </li>
                <li
                  class="nav-item"
                  role="presentation"
                >
                  <a
                    class="btn-root nav-link nav-link-monospaced btn btn-outline-borderless btn-outline-unstyled"
                    href="/?field=name&page=1&sortOrder=DESC"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-order_arrow_ascending icon-root"
                      role="presentation"
                    >
                      <use
                        href="#order_arrow_ascending"
                      />
                    </svg>
                  </a>
                </li>
              </ul>
              <div
                class="navbar-form navbar-form-autofit"
              >
                <div
                  class="input-group search"
                >
                  <div
                    class="input-group-item"
                  >
                    <input
                      class="input-root form-control input-group-inset input-group-inset-after"
                      placeholder="Search"
                      type="text"
                      value=""
                    />
                    <div
                      class="input-group-inset-item input-group-inset-item-after"
                    >
                      <button
                        aria-label="Search"
                        class="button-root btn btn-unstyled"
                        type="button"
                      >
                        <svg
                          class="lexicon-icon lexicon-icon-search icon-root"
                          role="presentation"
                        >
                          <use
                            href="#search"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <ul
                class="nav-root navbar-nav"
                role="tablist"
              >
                <li
                  class="nav-item"
                  role="presentation"
                >
                  <a
                    class="button-root btn btn-sm btn-primary"
                    href="/workspace/23/settings/data-source/add"
                  >
                    Add Data Source
                  </a>
                </li>
              </ul>
            </div>
          </nav>
        </div>
        <div
          class="table-responsive table-root flex-grow-1"
        >
          <table
            class="table table-autofit table-hover table-heading-nowrap table-nowrap"
          >
            <thead>
              <tr>
                <th
                  class="table-head-title"
                >
                  <a
                    class="button-root inline-item text-truncate-inline btn btn-unstyled"
                    href="/?field=name&page=1&sortOrder=DESC"
                  >
                    <span
                      class="text-truncate"
                    >
                      Name
                    </span>
                    <span
                      class="inline-item inline-item-after"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-order-arrow-up icon-root"
                        role="presentation"
                      >
                        <use
                          href="#order-arrow-up"
                        />
                      </svg>
                    </span>
                  </a>
                </th>
                <th
                  class="table-head-title"
                >
                  <a
                    class="button-root inline-item text-truncate-inline btn btn-unstyled"
                    href="/?field=providerType&page=1&sortOrder=ASC"
                  >
                    <span
                      class="text-truncate"
                    >
                      Source
                    </span>
                  </a>
                </th>
                <th
                  class="table-head-title"
                >
                  Contacts
                </th>
                <th
                  class="table-head-title"
                >
                  Analytics
                </th>
                <th
                  class="table-head-title"
                >
                  <a
                    class="button-root inline-item text-truncate-inline btn btn-unstyled"
                    href="/?field=createDate&page=1&sortOrder=DESC"
                  >
                    <span
                      class="text-truncate"
                    >
                      Date Added
                    </span>
                  </a>
                </th>
                <th
                  class="table-head-title"
                >
                  Status
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                class=""
              >
                <td
                  class="table-cell-expand"
                >
                  <div
                    class="table-title"
                  >
                    <a
                      class="text-truncate"
                      href="/workspace/23/settings/data-source/0"
                    >
                      CSV0
                    </a>
                  </div>
                </td>
                <td>
                  .CSV
                </td>
                <td>
                  <svg
                    class="lexicon-icon lexicon-icon-check icon-root"
                    role="presentation"
                  >
                    <use
                      href="#check"
                    />
                  </svg>
                </td>
                <td />
                <td>
                  Jul 8, 2018
                </td>
                <td>
                  <div
                    class="label label-root label-success label-uppercase"
                  >
                    <span
                      class="label-item"
                    >
                      Active
                    </span>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <nav
          class="navbar navbar-root pagination-bar-root"
        >
          <div
            class="container-fluid"
          >
            <div
              class="dropdown dropdown-root pagination-items-per-page"
            >
              <button
                aria-controls="clay-dropdown-menu-2"
                aria-expanded="false"
                aria-haspopup="true"
                class="dropdown-toggle button-root btn btn-sm btn-secondary"
                type="button"
              >
                2 Items
                <svg
                  class="lexicon-icon lexicon-icon-caret-bottom ml-2"
                  role="presentation"
                >
                  <use
                    href="#caret-bottom"
                  />
                </svg>
              </button>
            </div>
            <div
              class="pagination-results"
            >
              Showing 1 to 1 of 1 entry.
            </div>
            <ul
              class="pagination pagination-root"
            >
              <li
                class="page-item disabled"
              >
                <a
                  class="button-root btn btn-unstyled page-link"
                  disabled=""
                  href="/?page=0"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-angle-left-small icon-root"
                    role="presentation"
                  >
                    <use
                      href="#angle-left-small"
                    />
                  </svg>
                </a>
              </li>
              <li
                class="page-item active"
              >
                <a
                  class="button-root btn btn-unstyled page-link"
                  href="/?page=1"
                >
                  1
                </a>
              </li>
              <li
                class="page-item disabled"
              >
                <a
                  class="button-root btn btn-unstyled page-link"
                  disabled=""
                  href="/?page=2"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-angle-right-small icon-root"
                    role="presentation"
                  >
                    <use
                      href="#angle-right-small"
                    />
                  </svg>
                </a>
              </li>
            </ul>
          </div>
        </nav>
      </div>
    </div>
  </div>
</div>
`;

exports[`DataSourceList should render toast for multiple data sources with invalid credentials 1`] = `
<div
  class="embedded-alert-list-root"
>
  <div
    class="alert alert-warning"
    role="alert"
  >
    <span
      class="alert-indicator"
    >
      <svg
        class="lexicon-icon lexicon-icon-warning-full icon-root"
        role="presentation"
      >
        <use
          href="#warning-full"
        />
      </svg>
    </span>
    <strong
      class="lead"
    >
      Warning:
    </strong>
    Some of your authorization tokens have expired. Please reauthorize the account credentials on these data sources to prevent syncing interruptions.
  </div>
</div>
`;

exports[`DataSourceList should render toast for multiple data sources with invalid credentials for a member's view 1`] = `
<div
  class="embedded-alert-list-root"
>
  <div
    class="alert alert-warning"
    role="alert"
  >
    <span
      class="alert-indicator"
    >
      <svg
        class="lexicon-icon lexicon-icon-warning-full icon-root"
        role="presentation"
      >
        <use
          href="#warning-full"
        />
      </svg>
    </span>
    <strong
      class="lead"
    >
      Warning:
    </strong>
    Some of your authorization tokens have expired. Please contact your oAuth Administrator to reauthorize.
  </div>
</div>
`;

exports[`DataSourceList should render toast for one data source with invalid credentials 1`] = `
<div
  class="embedded-alert-list-root"
>
  <div
    class="alert alert-warning"
    role="alert"
  >
    <span
      class="alert-indicator"
    >
      <svg
        class="lexicon-icon lexicon-icon-warning-full icon-root"
        role="presentation"
      >
        <use
          href="#warning-full"
        />
      </svg>
    </span>
    <strong
      class="lead"
    >
      Warning:
    </strong>
    Your authorization token for 
    <b>
      Liferay1
    </b>
     has expired. Please 
    <a
      href="/workspace/23/settings/data-source/1"
    >
      reauthorize
    </a>
     your account credentials.
  </div>
</div>
`;

exports[`DataSourceList should render toast for one data source with invalid credentials for a member's view 1`] = `
<div
  class="embedded-alert-list-root"
>
  <div
    class="alert alert-warning"
    role="alert"
  >
    <span
      class="alert-indicator"
    >
      <svg
        class="lexicon-icon lexicon-icon-warning-full icon-root"
        role="presentation"
      >
        <use
          href="#warning-full"
        />
      </svg>
    </span>
    <strong
      class="lead"
    >
      Warning:
    </strong>
    Your authorization token for 
    <b>
      Liferay1
    </b>
     has expired. Please contact your OAuth Administrator, 
    test@liferay.com
    , to reauthorize.
  </div>
</div>
`;

exports[`DataSourceList should render with a member-specific message to connect datasources if there are none 1`] = `
<div
  class="no-results-root flex-grow-1 no-results-primary"
>
  <div
    class="no-results-content"
  >
    <div
      class="no-results-icon"
    >
      <svg
        class="lexicon-icon lexicon-icon-ac_satellite icon-root icon-size-xxxl"
        role="presentation"
      >
        <use
          href="#ac_satellite"
        />
      </svg>
    </div>
    <div
      class="h4 no-results-title"
    >
      No Data Sources Connected
    </div>
    <div
      class="no-results-description"
    >
      Please contact your workspace administrator to add data sources.
    </div>
  </div>
</div>
`;

exports[`DataSourceList should render with a message to connect datasources if there are none 1`] = `
<div
  class="no-results-root flex-grow-1 no-results-primary"
>
  <div
    class="no-results-content"
  >
    <div
      class="no-results-icon"
    >
      <svg
        class="lexicon-icon lexicon-icon-ac_satellite icon-root icon-size-xxxl"
        role="presentation"
      >
        <use
          href="#ac_satellite"
        />
      </svg>
    </div>
    <div
      class="h4 no-results-title"
    >
      No Data Sources Connected
    </div>
    <div
      class="no-results-description"
    >
      Add a data source to get started.
      <a
        class="d-block mb-3"
        href="https://learn.liferay.com/w/dxp/personalization/analytics-cloud/workspace-data/managing-data-sources"
        rel="noreferrer noopener"
        target="_blank"
      >
        Access our documentation to learn more.
        <span
          class="sr-only"
        >
          (Opens a new window)
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`DataSourceList should render with an empty state 1`] = `
<div
  class="no-results-root flex-grow-1"
>
  <div
    class="no-results-content"
  >
    <div
      class="no-results-icon"
    >
      <svg
        class="lexicon-icon lexicon-icon-ac_no_results_found icon-root icon-size-xxxl"
        role="presentation"
      >
        <use
          href="#ac_no_results_found"
        />
      </svg>
    </div>
    <div
      class="h4 no-results-title"
    >
      There are no results found.
    </div>
    <div
      class="no-results-description"
    >
      Please try a different search term.
    </div>
  </div>
</div>
`;
